--- a/human-inspectionreport/src/main/webapp/bootstrap/InspectionReportForm.html
+++ b/human-inspectionreport/src/main/webapp/bootstrap/InspectionReportForm.html
@@ -36,10 +36,10 @@
     <div class="well" id="field-root">
       Rig name: <input type="text" required class="object_information" style="margin-left: 3px; width:100px">
       <br><br>
-      <strong>Date:</strong> <input type="date" required class="object_information" style="margin-left: 32px; width:130px">
-      <strong>Time:</strong> <input type="time" required class="object_information" style="margin-left: 10px; width:75px">
+      <strong>Date:</strong> <input type="text" id="date" required class="object_information" style="margin-left: 32px; width:75px">
+      <strong>Time:</strong> <input type="text" id="time" required class="object_information" style="margin-left: 10px; width:50px">
       <br><br>
-      Inspection responsible person: <input type="text" required class="object_information" style="margin-left: 30px; width:100px">
+      Inspection responsible person: <input type="text" required class="object_information" style="margin-left: 7px; width:100px">
       <br>
       <br>
       Product code: <input type="text" required class="object_information" style="margin-left: 10px; width:100px">
@@ -51,7 +51,7 @@
       Equipment type:
       <select class="object_information" name="Equipment_data" style="margin-left: 10px">
         <option value="default">Choose type</option>
-        <option value="Top drive type">Top drive type</option>
+        <option value="Top drive">Top drive</option>
         <option value="RamRig">RamRig</option>
       </select>
       <br>
@@ -60,9 +60,9 @@
       <strong>Inspection type:</strong>
       <select class="object_information" id="dropList" name="Inspection_Type">
         <option name="defaultname" id="default" value="default">Choose type</option>
-        <option id="Visual_inspection" value="Visual_inspection">Visual inspection</option>
-        <option id="Rating_swivel" value="Rating_swivel">Vibration monitoring</option>
-        <option id="Oil_sampling" value="Oil_sampling">Oil sampling</option>
+        <option id="Visual_inspection" value="Visual inspection">Visual inspection</option>
+        <option id="Vibration_monitoring" value="Vibration monitoring">Vibration monitoring</option>
+        <option id="Oil_sampling" value="Oil sampling">Oil sampling</option>
       </select>
       <br>
       <br>
@@ -77,11 +77,11 @@
       <tr>
         <td>
           Resulting criticality rating swivel:
-          <select id="Find_Visual_Inspection-1-1" style="margin-left: 15px">
-            <option value="default">Choose value</option>
-            <option value="Low">Low</option>
-          <option value="Medium">Medium</option>
-          <option value="High">High</option>
+          <select class ="readable_value" id="Find_Visual_Inspection-1-1" style="margin-left: 15px">
+            <option value="0">Choose value</option>
+            <option value="1">Low</option>
+          <option value="2">Medium</option>
+          <option value="3">High</option>
           </select>
 
         <td>
@@ -93,11 +93,11 @@
             <td>
 
               Resulting criticality rating gearbox:
-              <select id="Find_Visual_Inspection-1-3">
-                <option value="default">Choose value</option>
-                <option value="Low">Low</option>
-              <option value="Medium">Medium</option>
-              <option value="High">High</option>
+              <select class="readable_value" id="Find_Visual_Inspection-1-3">
+                <option value="0">Choose value</option>
+                <option value="1">Low</option>
+              <option value="2">Medium</option>
+              <option value="3">High</option>
             </select>
 
             <td>
@@ -118,38 +118,38 @@
       <tr>
 
         <td>
-      Velocity swivel: <input id="Finding_Vibrations-1-1" type="number" step="any" required  style="margin-left: 43px; width:50px">mm/s
+      Velocity swivel: <input id="Finding_Vibrations-1-1" type="number" step="any" class="readable_value" required  style="margin-left: 43px; width:50px">mm/s
            < 0,1 mm/s <td>
 
-          Finding vibration:<input id="Finding_Vibrations-1-2" type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:70px">
+          Finding vibration:<input id="Finding_Vibrations-1-2" type="text" step="any" class="readable_value1" readonly style="margin-left: 10px; width:70px">
         </td>
       </tr>
 
           <tr>
         <td>
-          Acceleration swivel:<input id="Finding_Vibrations-1-3" type="number" step="any" required  style="margin-left: 18px; width:50px">mm/s<sup>2</sup>
+          Acceleration swivel:<input id="Finding_Vibrations-1-3" type="number" step="any" class="readable_value" required  style="margin-left: 18px; width:50px">mm/s<sup>2</sup>
           < 0,05 mm/s<sup>2</sup>
         </td>
             <td>
-            Finding vibration:<input id="Finding_Vibrations-1-4" type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:70px">
+            Finding vibration:<input id="Finding_Vibrations-1-4" type="text" step="any" class="readable_value1" readonly style="margin-left: 10px; width:70px">
             </td>
           </tr>
 
         <tr>
         <td>
-          Velocity gearbox: <input id="Finding_Vibrations-1-5" type="number" step="any" required  style="margin-left: 29px; width:50px">mm/s  < 0,2 mm/s
+          Velocity gearbox: <input id="Finding_Vibrations-1-5" type="number" step="any" class="readable_value" required  style="margin-left: 29px; width:50px">mm/s  < 0,2 mm/s
         </td>
           <td>
-            Finding vibration:<input id="Finding_Vibrations-1-6" type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:70px">
+            Finding vibration:<input id="Finding_Vibrations-1-6" type="text" step="any" class="readable_value1" readonly style="margin-left: 10px; width:70px">
           </td>
         </tr>
           <tr>
             <td>
-            Acceleration gearbox: <input id="Finding_Vibrations-1-7" type="number" step="any" required style="margin-left: 0px; width:50px">mm/s<sup>2</sup>
+            Acceleration gearbox: <input id="Finding_Vibrations-1-7" type="number" step="any" class="readable_value" required style="margin-left: 0px; width:50px">mm/s<sup>2</sup>
               < 0,1 mm/s<sup>2</sup>
             </td>
             <td>
-            Finding vibration:<input id="Finding_Vibrations-1-8" type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:70px">
+            Finding vibration:<input id="Finding_Vibrations-1-8" type="text" step="any"class="readable_value1" readonly style="margin-left: 10px; width:70px">
             </td>
           </tr>
         </tr>
@@ -164,34 +164,34 @@
           </tr>
       <tr>
       <td>
-        Fe content swivel: <input id=Finding_oil_sampling-1-1 type="number" step="any" required style="margin-left: 19px; width:50px;">
+        Fe content swivel: <input id=Finding_oil_sampling-1-1 type="number" step="any" class="readable_value" required style="margin-left: 19px; width:50px;">
           ppm < 5 ppm
       </td>
         <td>
-          Finding oil sampling:<input id=Finding_oil_sampling-1-2 type="text" step="any" class="readable_value" readonly style="margin-left: 10px; width:100px">
+          Finding oil sampling:<input id=Finding_oil_sampling-1-2 type="text" step="any" class="readable_value1" readonly style="margin-left: 10px; width:100px">
           </td>
       </tr>
 
       <tr>
-      <td>Viscosity swivel: <input id=Finding_oil_sampling-1-3 type="number" step="any" required style="margin-left: 32px; width:50px">
+      <td>Viscosity swivel: <input id=Finding_oil_sampling-1-3 type="number" step="any" class="readable_value" required style="margin-left: 32px; width:50px">
         cSt 200 < Viscosity swivel < 240 cSt</td>
         <td>
-          Finding oil sampling:<input id=Finding_oil_sampling-1-4 type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:100px">
+          Finding oil sampling:<input id=Finding_oil_sampling-1-4 type="text" step="any"class="readable_value1" readonly style="margin-left: 10px; width:100px">
         </td>
       </tr>
           <tr>
-          <td>Fe content gearbox: <input id="Finding_oil_sampling-1-5" type="number" step="any" required style="margin-left: 5px; width:50px">
+          <td>Fe content gearbox: <input id="Finding_oil_sampling-1-5" type="number" class="readable_value" step="any" required style="margin-left: 5px; width:50px">
             ppm < 10 ppm</td>
             <td>
-              Finding oil sampling:<input id=Finding_oil_sampling-1-6 type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:100px">
+              Finding oil sampling:<input id=Finding_oil_sampling-1-6 type="text" step="any"class="readable_value1" readonly style="margin-left: 10px; width:100px">
             </td>
           </tr>
 
           <tr>
-        <td>Viscosity gearbox: <input id=Finding_oil_sampling-1-7 type="number" step="any" required style="margin-left: 18px; width:50px">
+        <td>Viscosity gearbox: <input id=Finding_oil_sampling-1-7 type="number" step="any" class="readable_value" required style="margin-left: 18px; width:50px">
             cSt 60 < Viscosity gearbox < 75 cSt</td>
             <td>
-              Finding oil sampling:<input id=Finding_oil_sampling-1-8 type="text" step="any"class="readable_value" readonly style="margin-left: 10px; width:100px">
+              Finding oil sampling:<input id=Finding_oil_sampling-1-8 type="text" step="any"class="readable_value1" readonly style="margin-left: 10px; width:100px">
             </td>
           </tr>
         </table>
@@ -208,13 +208,34 @@
 </html>
 
 <script>
+
   $('#Find_Visual_Inspection').hide();
   $('#Finding_Vibrations').hide();
   $('#Finding_oil_sampling').hide();
-  $('.readable_value').css({"background-color": "lightgrey"});
+  $('.readable_value').css({"background-color": "white"});
   $('.readable_value').val("NA");
-  // testChange
+  $('#Find_Visual_Inspection-1-1').css({"background-color": "white"});
+  $('#Find_Visual_Inspection-1-1').val(0);
+  $('#Find_Visual_Inspection-1-3').css({"background-color": "white"});
+  $('#Find_Visual_Inspection-1-3').val(0);
+
+  // date
+  var date = new Date();
+  var days = date.getDate();
+  var month = date.getMonth();
+  var year = date.getFullYear();
+  var fullDate = days+"-"+month+"-"+year;
+  $("#date").val(fullDate);
+
+  // time
+  var hours = date.getHours();
+  var minutes = date.getMinutes();
+  var localTime = hours+":"+minutes
+  $("#time").val(localTime);
+
   $(document).ready(function() {
+
+
 
     $('#Find_Visual_Inspection-1-1').on('input', function() {
       var conceptName = $('#Find_Visual_Inspection-1-1 :selected').text();
@@ -255,7 +276,6 @@
 
     $('#Finding_Vibrations-1-3').on('input', function() {
       var conceptName = $('#Finding_Vibrations-1-3').val();
-        alert(conceptName < 0.05);
       if(conceptName < 0.05){
         $('#Finding_Vibrations-1-4').css({'backgroundColor': "lightgreen"});
         $('#Finding_Vibrations-1-4').val("True");
@@ -333,7 +353,7 @@
         $('#Finding_oil_sampling-1-8').css({'backgroundColor': "lightgreen"});
         $('#Finding_oil_sampling-1-8').val("True");
       }else{
-        $('#Finding_oil_sampling-1-8').css({'backgroundColor': "red"});
+          $('#Finding_oil_sampling-1-8').css({'backgroundColor': "red"});
         $('#Finding_oil_sampling-1-8').val("False");
       }
     });
@@ -344,16 +364,17 @@
       $('#Finding_oil_sampling').hide();
 
         var input = $(this).val();
-        if(input === "Visual_inspection"){
+        if(input === "Visual inspection"){
           $('#Find_Visual_Inspection').show();
-        }else if(input === "Rating_swivel"){
+        }else if(input === "Vibration monitoring"){
           $('#Finding_Vibrations').show();
-        }else if(input === "Oil_sampling"){
+        }else if(input === "Oil sampling"){
           $('#Finding_oil_sampling').show();
         }
     });
 
     function sendRequest(field_values){
+      alert(field_values);
       var request = new XMLHttpRequest();
       request.open('POST', 'http://localhost:8080/adapter/InspectionReportForm', false);
       request.setRequestHeader("Content-Type", "application/json");
@@ -363,16 +384,30 @@
     $('#submit').click(function () {
 
       var answers = [];
+      var object_information = [];
+      var redable_value1 = [];
       $.each($('.readable_value'), function() {
         answers.push($(this).val());
       });
 
-      sendRequest(answers.toString());
+      $.each($('.object_information'), function() {
+        object_information.push($(this).val());
+      });
 
-      $('#Human_form').reset();
+      $.each($('.readable_value1'), function() {
+        redable_value1.push($(this).val());
+      });
+
+      sendRequest(object_information.toString()+"_"+answers.toString()+"_"+redable_value1.toString());
+
+      $('#Human_form')[0].reset();
+      $('.readable_value1').css({"background-color": "white"});
+      $('.readable_value').css({"background-color": "white"});
+     // $('.readable_value1').val("NA");
+      $("#date").val(fullDate);
+      $("#time").val(localTime);
 
     });
-
   });
 
 </script>
