--- a/human-materialchange/src/main/webapp/index.html
+++ b/human-materialchange/src/main/webapp/index.html
@@ -110,7 +110,7 @@
 
       var request = new XMLHttpRequest();
 
-      request.open('POST', 'http://localhost:8080/adapter/changeForm', false);
+      request.open('POST', 'http://localhost:8080/human-materialchange/server/MaterialChangeServer', false);
 
       request.setRequestHeader("Content-Type", "application/json");
 
