--- a/human-inspectionreport/src/main/webapp/index.html
+++ b/human-inspectionreport/src/main/webapp/index.html
@@ -375,7 +375,7 @@
 
     function sendRequest(field_values){
       var request = new XMLHttpRequest();
-      request.open('POST', 'http://localhost:8080/human-inspectionreport/server/InspectionReportServer', true);
+      request.open('POST', 'http://localhost:8080/human-inspectionreport/server/InspectionReportServer', false);
       request.setRequestHeader("Content-Type", "application/json");
       request.send(field_values);
     }
