--- a/human-materialcertificate/src/main/webapp/index.html
+++ b/human-materialcertificate/src/main/webapp/index.html
@@ -88,7 +88,7 @@
     function sendRequest(field_values){
       var request = new XMLHttpRequest();
 
-      request.open('POST', 'http://localhost:8080/human-materialcertificate/server/MaterialCertificateServer', false);
+      request.open('POST', 'http://win7proxmox1v.hss.hella.com:8080/human-materialcertificate/server/MaterialCertificateServer', false);
       request.setRequestHeader("Content-Type", "application/json");
       request.send(field_values);
     }
