--- a/human-maintenancereport/src/main/webapp/index.html
+++ b/human-maintenancereport/src/main/webapp/index.html
@@ -134,7 +134,8 @@
 
     function sendRequest(field_values){
       var request = new XMLHttpRequest();
-      request.open('POST', 'http://proasense.nissatech.com/human-maintenancereport/server/MaintenanceReportServer', false);
+//      request.open('POST', 'http://proasense.nissatech.com/human-maintenancereport/server/MaintenanceReportServer', false);
+      request.open('POST', 'http://192.168.84.41:8092/human-maintenancereport/server/MaintenanceReportServer', false);
       request.setRequestHeader("Content-Type", "application/json");
       request.send(field_values);
     }
